--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,42 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  background-color: #F9F9F9;
+}
+
+.content {
+  background-color: white;
+  border-style: solid;
+  border-width: thin;
+  border-color: lightgray;
+  box-shadow: 0 0 5px darkgray;
+} 
+#navbar-hidden {
+  top:-10%;
+  transition: top, background-color 0.5s;
+  background-color: rgba(255,255, 255, 0) !important;
+}
+#navbar-visible {
+  top:0;
+  transition: top, background-color 0.5s;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.square {
+  height: 60px;
+  width: 60px;
+  background-color: #212529;
+  color: lightgray;
+  border-radius: 15%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  text-align: center;
+  font-weight: bold;
+  font-size: x-large;
 }
