--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Dosis&family=PT+Sans:wght@700&family=Roboto+Slab&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
