update team config to drive, update node, remove old reveal library

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -32,3 +32,13 @@
 .custom-table tr:nth-of-type(5n) {
   border-bottom: 1.5px solid rgb(0, 0, 0);
 }
+.custom-table {
+  table-layout:fixed;
+  margin: 0;
+}
+.custom-table .team {
+  width: 40%; 
+}
+.custom-table .date {
+  width: 20%; 
+}
