--- a/client/src/Loader.css
+++ b/client/src/Loader.css
@@ -133,7 +133,7 @@
   }
 }
 .loading {
-      background-color: lightgrey;
+      background-color: lightgrey !important;
       min-height: 6cm;
       width: 90%;
       height: 90%;
